# OCProjet_tournoiEchec

./: .flake8  .gitignore  README.md  controleur.py  joueur.py  main.py  match.py  pyproject.toml  requirements.txt  round.py  test_modele.py  test_tournois.py  tournament.py  tournois.py  unitest.py
chess_tournament/: main.py
controller/: DB_test.json  controller.py  dbManager.py  db_manager.py  deserializer.py
flake8_rapport/: chess_tournament.controller.controller.report.html  chess_tournament.controller.controller.source.html  chess_tournament.controller.db_manager.report.html  chess_tournament.controller.db_manager.source.html  chess_tournament.controller.deserializer.report.html  chess_tournament.controller.deserializer.source.html  chess_tournament.main.report.html  chess_tournament.main.source.html  chess_tournament.models.date_property.report.html  chess_tournament.models.date_property.source.html  chess_tournament.models.gender_property.report.html  chess_tournament.models.gender_property.source.html  chess_tournament.models.match.report.html  chess_tournament.models.match.source.html  chess_tournament.models.multiple_choices_property.report.html  chess_tournament.models.multiple_choices_property.source.html  chess_tournament.models.player.report.html  chess_tournament.models.player.source.html  chess_tournament.models.property.report.html  chess_tournament.models.property.source.html  chess_tournament.models.round.report.html  chess_tournament.models.round.source.html  chess_tournament.models.tournament.report.html  chess_tournament.views.base.report.html  (+17 more)
(+43 files in other folders)
