[tool.poetry]
name = "chess_tournament"
version = "0.1.0"
description = "chess tournament package made for the openclassrooms' python developper trainning"
authors = ["jonathan payssan"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
