[tool.poetry]
name = "chess_tournament"
version = "0.1.0"
description = "chess tournament package made for the openclassrooms' python developper trainning"
authors = ["jonathan payssan"]

[tool.poetry.dependencies]
python = "^3.9"
DateTime = "^4.4"
tinydb = "^4.7.0"
pdbpp = "^0.10.3"
pytest = "^7.1.2"
flake8 = "^4.0.1"
flake8-html = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
